--- a/file-view/pom.xml
+++ b/file-view/pom.xml
@@ -7,10 +7,17 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>3.5.3</version>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>5.0.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
